Remove accessory system (#1)